add wallet strategy for keplr

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@cosmjs/stargate": "^0.32.2",
     "@cosmos-kit/keplr": "^2.6.9",
     "@cosmos-kit/react": "^2.10.10",
+    "@injectivelabs/exceptions": "^1.14.13",
+    "@injectivelabs/sdk-ts": "^1.14.13",
+    "@injectivelabs/ts-types": "^1.14.13",
+    "@injectivelabs/wallet-ts": "^1.14.13",
     "@interchain-ui/react": "^1.23.13",
     "chain-registry": "^1.28.0",
     "next": "13.4.8",
